--- a/Bill.html
+++ b/Bill.html
@@ -18,7 +18,7 @@ div{
 <body>
 <center>
     <div  id="mydiv" >
-<form>
+<form action="DateTime.html">
 <h3>CAB ROCKER</h3><center>
 <img src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMR16F7LgH7zGoJN3EbtLYlLzDcgAnjG_V-Q&usqp=CAU" width="200" height="200">
 </center><br>
@@ -34,7 +34,7 @@ div{
 <input type="number" name="name" id="Km" placeholder="Enter km" required>
 
 <br><br>
-<button style="color:blue" formaction="DateTime.html"> SUBMIT </button>
+<button style="color:blue" href="DateTime.html"> SUBMIT </button>
 </form>
 
 </center>
