--- a/Bill.html
+++ b/Bill.html
@@ -34,7 +34,7 @@ div{
 <input type="number" name="name" id="Km" placeholder="Enter km" required>
 
 <br><br>
-<button style="color:blue" href="DateTime.html"> SUBMIT </button>
+    <a href="DateTime.html"> <button style="color:blue" > SUBMIT </button></a>
 </form>
 
 </center>
