--- a/Bill.html
+++ b/Bill.html
@@ -34,11 +34,11 @@ div{
 <input type="number" name="name" id="Km" placeholder="Enter km" required>
 
 <br><br>
-    <a href="DateTime.html"> <button style="color:blue" > SUBMIT </button></a>
+<button style="color:blue"> SUBMIT </button>
 </form>
-
+</div>
 </center>
 
-    </div>
+
 </body>
 </html>
