--- a/Bill.html
+++ b/Bill.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Bill</title>
+<title>Insert title here</title>
 <style>
 div{
     width:400px;
@@ -18,12 +18,10 @@ div{
 <body>
 <center>
     <div  id="mydiv" >
-<h3>CAB ROCKER1</h3><center>
+<form action="DateTime.html">
+<h3>CAB ROCKER</h3><center>
 <img src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMR16F7LgH7zGoJN3EbtLYlLzDcgAnjG_V-Q&usqp=CAU" width="200" height="200">
 </center><br>
-        
-        <form action="DateTime.html">
-
 <label> Select Cab Type :</label>
 
 <select name="Cab Type" >
