--- a/DateTime.html
+++ b/DateTime.html
@@ -1,44 +1,42 @@
-<!DOCTYPE html>
 <html>
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
-<style>
-div{
-    width:400px;
-    height:400px;
-    border:3px solid grey;
-    padding:50px;
-    margin-top:5px;
-    background:pink;
-
-}
-</style>
-</head>
-<body>
 <center>
-    <div  id="mydiv" >
+<style>
+        div{
+            widows:600pxpx;
+            height:600px;
+            border:3px solid black;
+            padding:50px;
+            margin-top:5px;
+            background:rgb(216, 157, 211);
+            margin-left:100mm;
+            margin-right:100mm;
+        
+
+        
+        }
+        </style></center>
+</head>
+<body >
+<center>
+        <div  id="mydiv" >
 <form>
-<h3>CAB ROCKER</h3><center>
-<img src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMR16F7LgH7zGoJN3EbtLYlLzDcgAnjG_V-Q&usqp=CAU" width="200" height="200">
-</center><br>
-<label> Select Cab Type :</label>
-
-<select name="Cab Type" >
-      <option value="MICRO" id="MIC">MICRO </option>
-      <option value="MINI"  id="MIN">MINI </option>
-      <option value="PRIME" id="PRI">PRIME</option>
-      </select>
-<br> <br>
-<label for="name">No of km : </label>
-<input type="number" name="name" id="Km" placeholder="Enter km" required>
-
+        <h1 style="color:red"><center>!! TIME IS GOLD ** SO DONT WASTE YOUR TIME !!</center></h1>
+<label>Journey Date</label>
+<input type="date"name="Journey" id="date" placeholder="Journey Date" required>
 <br><br>
-<button style="color:blue" formaction="DateTime.html"> SUBMIT </button>
+<label>Journey Time</label>
+<input type ="time" name="Journey" id="Time" placeholder="Journey Date"  required><br><br>
+<button style="color:rgb(68, 0, 255)" formaction="DOB.html" >LOGIN</button>
+<center><video autoplay muted loop id="video" width="500" height="500">
+        <source src="https://cdn.videvo.net/videvo_files/video/free/2020-03/small_watermarked/200207_London%20Streets_1_4k_032_preview.webm" type="video/mp4">
+        </video></center>
+<br> <br>
+
 </form>
 </div>
 </center>
-
-
 </body>
 </html>
